# esa-scratchpad

./: .pre-commit-config.yaml  Cargo.toml  README.md
.agents/skills/writing-scratchpad/: SKILL.md
.github/workflows/: lint.yml  test.yml
src/: client.rs  client_tests.rs  commands.rs  commands_tests.rs  config.rs  config_tests.rs  entry.rs  entry_tests.rs  error.rs  main.rs  main_tests.rs  validator.rs  validator_tests.rs
