[package]
name = "esa-scratchpad"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
indoc = "2.0.7"
serial_test = "3.4.0"
